# wallet-analysis

./: .gitignore  README.md  docker-compose.yml  eslint-plugin-no-comments.js  eslint.config.js  fly.toml  index.html  package-lock.json  package.json  vite.config.js
.husky/: pre-commit
backend/: .repomixignore  Dockerfile  app.py  debugger.py  fly.toml  main.py  pyproject.toml  repomix.config.json  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 1e75643b289f_create_ibov_history_table.py  2e82086b5fe9_add_balancing_settings_to_users.py  34cdd836ac18_fix_prices_and_add_cache.py  3a4bdcf67ec9_create_asset_purchases_table.py  705ae752d65e_create_public_users_table.py  81d92d0b79d3_create_cdi_history_table.py  996774ea844a_add_adjusted_close_to_b3_prices.py  df33b7617cc2_initial_tables.py
backend/routers/: analysis.py  auth.py  sync.py
backend/source/core/: database.py  db.py
backend/source/features/analysis/: analysis_router.py  analysis_schema.py
backend/source/features/auth/: auth_router.py  auth_schemas.py  jwt_identity_extraction.py
backend/source/features/market_data/: market_data_constants.py  market_data_router.py  market_data_schemas.py
backend/source/features/users/: user_router.py  user_schemas.py
backend/source/features/wallet/: wallet_router.py  wallet_schema.py
backend/source/models/: all_models.py  sql_models.py
frontend/: .repomixignore  Dockerfile  Dockerfile.dev  eslint-plugin-no-comments.js  eslint.config.js  fly.toml  index.html  package-lock.json  package.json  repomix.config.json  tailwind.config.js  vite.config.js  (+1 more)
(+93 files in other folders)
