[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mateusb12 <matbessa12@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.4"
uvicorn = "^0.30.3"
pandas = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
